Verified Manual Trading logic  (#25)
* Add test.txt for using git

* - Verified Manual Trading logic - so far no mistakes

- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" in Quote Page

- TO DO:
   - Check "Quote size" in IEX document
   - Add "Avg Cost" and "Proportion" on Portfolio Page
   - When selling stocks, add PNL info, which can be shown in the History Page
   - Pie Chart for Portfolio

* - Verified Manual Trading logic - so far no mistakes

- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" and "Market Status" in Quote Page

- Included "Proportion" on Portfolio Page

- Have checked "Quote size" in IEX document, still no clues for whether it is in "lot"(100 shares).

- TO DO:
   - Add "Avg Cost" on Portfolio Page, so we have PnL on each position
   - Pie Chart for Portfolio, bar plot for PnL on each postion

* Add test.txt for using git

* - Verified Manual Trading logic - so far no mistakes

- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" in Quote Page

- TO DO:
   - Check "Quote size" in IEX document
   - Add "Avg Cost" and "Proportion" on Portfolio Page
   - When selling stocks, add PNL info, which can be shown in the History Page
   - Pie Chart for Portfolio

* - Verified Manual Trading logic - so far no mistakes

- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" and "Market Status" in Quote Page

- Included "Proportion" on Portfolio Page

- Have checked "Quote size" in IEX document, still no clues for whether it is in "lot"(100 shares).

- TO DO:
   - Louis's review:
      1. Use f-string
      2. Fix SELECT *
      3. Delete test.txt
      4. Add typing to function header
      (Optional) make

--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -40,6 +40,8 @@
 				<th style="text-align:center">Bid Size</th>
 				<th style="text-align:center">Ask Price</th>
 				<th style="text-align:center">Ask Size</th>
+				<th style="text-align:center">Latest Price</th>
+				<th style="text-align:center">Market Status</th>
 			</tr>
 			</thead>
 
@@ -50,6 +52,8 @@
 				<td>{{dict['bidSize']}}</td>
 				<td>{{dict['askPrice']|usd}}</td>
 				<td>{{dict['askSize']}}</td>
+				<td>{{dict['Latest Price']|usd}}</td>
+				<td>{{dict['Market']}}</td>
 			</tr>
 			</tbody>
 		</table>
