--- a/system/templates/pair_trading.html
+++ b/system/templates/pair_trading.html
@@ -3,7 +3,7 @@
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link" href="/pair_trade_build_model">Building Model</a>
+            <a class="nav-link" href="/pair_trade_build_model_param">Building Model</a>
         </li>
 		<li class="nav-item">
             <a class="nav-link" href="/pair_trade_back_test">Back Testing</a>
