--- a/system/templates/md_stock.html
+++ b/system/templates/md_stock.html
@@ -20,6 +20,9 @@
 		<li class="nav-item">
             <a class="nav-link" href="/md_fundamentals">Stock Fundamentals</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/md_update_data">Update Market Data (takes 1 min)</a>
+        </li>
     </ul>
 </nav>
 
