--- a/system/templates/sim_server_down.html
+++ b/system/templates/sim_server_down.html
@@ -11,6 +11,15 @@
         <li class="nav-item">
             <a class="nav-link active" href="/sim_server_down">Stop Server</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/sim_model_info">Model Info</a>
+        </li>
     </ul>
 </nav>
 
