--- a/system/templates/sim_trading.html
+++ b/system/templates/sim_trading.html
@@ -11,11 +11,21 @@
         <li class="nav-item">
             <a class="nav-link" href="/sim_server_down">Stop Server</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/sim_model_info">Model Info</a>
+        </li>
     </ul>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
     <h3><strong>Simulated Trading</strong></h3>
+    <br>
 	<div align="center">
 		<table cellspacing="0" cellpadding="0" border="0" style="font-family:Georgia, Garamond, Serif;">
 			<tbody>
