--- a/system/templates/error_auto_trading.html
+++ b/system/templates/error_auto_trading.html
@@ -11,7 +11,15 @@
         <li class="nav-item">
             <a class="nav-link" href="/sim_server_down">Stop Server</a>
         </li>
-    </ul>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/sim_model_info">Model Info</a>
+        </li>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
