after last meeting
#79

--- a/system/templates/sim_launch_server.html
+++ b/system/templates/sim_launch_server.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
             <a class="nav-link"></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="border-bottom: 2px solid #D3D3D3; border-top: 2px solid #D3D3D3;">
             <a class="nav-link" href="/sim_model_info">Model Info</a>
         </li>
     </ul>
