--- a/system/templates/sim_model_info.html
+++ b/system/templates/sim_model_info.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
             <a class="nav-link"></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="border-bottom: 2px solid #D3D3D3; border-top: 2px solid #D3D3D3;">
             <a class="nav-link active" href="/sim_model_info">Model Info</a>
         </li>
     </ul>
@@ -50,7 +50,7 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							Within S&P500 component pool, select 10 stocks with highest 5-minute volatility over the last month of the historical data part.
+							Within S&P500 component pool, select 4 stocks with highest 1-minute volatility over the last month of the historical data part.
 						</p>
 					</td>
 				</tr>
