--- a/system/templates/sim_auto_trading.html
+++ b/system/templates/sim_auto_trading.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
             <a class="nav-link"></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="border-bottom: 2px solid #D3D3D3; border-top: 2px solid #D3D3D3;">
             <a class="nav-link" href="/sim_model_info">Model Info</a>
         </li>
     </ul>
@@ -57,6 +57,7 @@
             {% endfor %}
             </tbody>
         </table>
+        <hr>
     </div>
     <br>
     <div class="table-responsive">
