--- a/system/templates/ai_modeling.html
+++ b/system/templates/ai_modeling.html
@@ -117,7 +117,7 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							2) Use 10.5 years (1/1/2010-6/31/2020) of daily price data
+							2) Use 1.5 years (1/1/2019-6/31/2020) of daily price data
 							for each S&amp;P 500 stock and SPY data for portfolio gene
 							and chromosome creation
 						</p>
@@ -147,7 +147,10 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							1) Sqlite3 integration
+                            1) Sqlite3 integration
+                        </p>
+                        <p>
+                            2) Please run Update Market Data before building a GA model
 						</p>
 					</td>
 				</tr>
