--- a/system/templates/index.html
+++ b/system/templates/index.html
@@ -121,6 +121,15 @@
 						</p>
 					</td>
 				</tr>
+                <tr>
+					<td width="881" valign="top">
+						<p>
+							5) Market orders and limit orders could be either fully filled and partially filled based on quote bid and ask size.
+								<br>&nbsp;&nbsp;&nbsp;&nbsp;• If an order quantity is equal to or less than corresponding quote size, the order will be fully filled.
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;• Otherwise, the order will be partially filled.
+						</p>
+					</td>
+				</tr>
 				<tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
 					<th width="881" valign="top">
 						<p>
