--- a/system/templates/pair_trading.html
+++ b/system/templates/pair_trading.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							Pair trading is a well-known statistical arbitrage trading strategy for stock trading. An an example, stock pairs are selected from S&P500 technology sector 
+							Pair trading is a well-known statistical arbitrage trading strategy for stock trading. As an example, stock pairs are selected from S&P500 technology sector
 							based on OLS regression, cointegration test and ADF test.
 						</p>
 					</td>
