Minor title change

--- a/system/templates/sim_trading.html
+++ b/system/templates/sim_trading.html
@@ -24,7 +24,7 @@
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3><strong>Simulated Trading</strong></h3>
+    <h3><strong>Simulated Market</strong></h3>
     <br>
 	<div align="center">
 		<table cellspacing="0" cellpadding="0" border="0" style="font-family:Georgia, Garamond, Serif;">
