--- a/system/templates/history.html
+++ b/system/templates/history.html
@@ -23,6 +23,9 @@
                     <a class="nav-link" href="/sell">Sell Stock</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/short">Short Stock</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="/history">History</a>
                 </li>
             </ul>
