--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/sell">Sell Stock</a>
         </li>
+		<li class="nav-item">
+			<a class="nav-link" href="/short">Short Stock</a>
+		</li>
         <li class="nav-item">
             <a class="nav-link" href="/history">History</a>
         </li>
