--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<title>FRE Platform: {% block title %}{% endblock %}</title>
-		<link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
-		<!--link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"-->
+		<!--link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"-->
+		<!--link href="https://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet"-->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
 		<link href="/static/favicon.ico" rel="icon">
 		<link href="/static/styles.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-		
+
 		<!-- https://www.codexworld.com/export-html-table-data-to-csv-using-javascript/ -->
 		<script>
 			function downloadCSV(csv, filename) {
@@ -62,7 +62,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-toggleable-md navbar-custom fixed-top navbar-dark border">
+		<nav class="navbar navbar-toggleable-md navbar-custom navbar-expand-md navbar-dark border">
 			<a class="navbar-brand" href="/"><span class="blue"><b>FRE </b></span><span class="green"><b>Platform</b></span></a>
 			<button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -75,8 +75,9 @@
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/European_pricing">AssetsPricing</a></li>
 					</ul>
-					
+
 					<ul class="navbar-nav ml-auto mt-2">
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/logout">Log Out</a></li>
 					</ul>
