--- a/system/templates/index.html
+++ b/system/templates/index.html
@@ -95,7 +95,7 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							1) Provides manual trading based on quotes. Currently the system does not support short stocks. 
+							1) Provides manual trading based on quotes.
 						</p>
 					</td>
 				</tr>
@@ -130,6 +130,43 @@
 							5) Market orders and limit orders could be either fully filled and partially filled based on quote bid and ask size.
 								<br>&nbsp;&nbsp;&nbsp;&nbsp;• If an order quantity is equal to or less than corresponding quote size, the order will be fully filled.
                                 <br>&nbsp;&nbsp;&nbsp;&nbsp;• Otherwise, the order will be partially filled.
+						</p>
+					</td>
+				</tr>
+				<tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
+					<th width="881" valign="top">
+						<p>
+							<strong>Short Stock</strong>
+						</p>
+					</th>
+				</tr>
+				<tr>
+					<td width="881" valign="top">
+						<p>
+							1) Similar ability to short stock as brokerage account does.
+						</p>
+					</td>
+				</tr>
+				<tr>
+					<td width="881" valign="top">
+						<p>
+							2) Open a short position would add negative shares to portfolio and increase cash amount.
+						</p>
+					</td>
+				</tr>
+				<tr>
+					<td width="881" valign="top">
+						<p>
+							3) To close a short position simply use buy stock function to buy back.
+						</p>
+					</td>
+				</tr>
+				<tr>
+					<td width="881" valign="top">
+						<p>
+							4) Short position has few thresholds.
+								<br>&nbsp;&nbsp;&nbsp;&nbsp;• User cannot hold both long position and short position.
+								<br>&nbsp;&nbsp;&nbsp;&nbsp;• User required to hold enough cash to make a short position order.
 						</p>
 					</td>
 				</tr>
