--- a/system/templates/ap_CDS.html
+++ b/system/templates/ap_CDS.html
@@ -8,30 +8,33 @@ CDS
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link " href="/European_pricing">European Option</a>
+            <a class="nav-link " href="/ap_introduction">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/American_pricing">American Option</a>
+            <a class="nav-link " href="/ap_european_pricing">European Option</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/FixedRateBond">Fixed Rate Bond</a>
+            <a class="nav-link " href="/ap_american_pricing">American Option</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active " href="/CDS">Credit Default Swap</a>
+            <a class="nav-link " href="/ap_fixedRateBond">Fixed Rate Bond</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active " href="/ap_CDS">Credit Default Swap</a>
         </li>
     </ul>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3>CDS Parameters</h3>
+    <h3>CDS</h3>
     <hr>
     <div class="form-group">
-        <form action="/CDS" id="calculate" method="POST">
-            <p style = "width:500px;" align="right">Nominal value: <input type = "text" name = "Nominal" style = "width:200px;"></p>
-            <p style = "width:500px;" align="right">Spread in basis point: <input type = "text" name = "Spread" style = "width:200px;"></p>
-            <p style = "width:500px;" align="right">Recovery rate: <input type = "text" name = "Recovery Rate" style = "width:200px;"></p>
-            <p style = "width:500px;" align="right">Hazard rate: <input type = "text" name = "Hazard Rate" style = "width:200px;"></p>
-            <p style = "width:500px;" align="right">Risk-free rate: <input type = "text" name = "Discount Rate" style = "width:200px;"></p>
+        <form action="/ap_CDS" id="calculate" method="POST">
+            <p style = "width:500px;" align="right">Notional value: <input type = "text" name = "Nominal" style = "width:200px;"></p>
+            <p style = "width:500px;" align="right">Spread (in basis point) : <input type = "text" name = "Spread" style = "width:200px;"> </p>
+            <p style = "width:500px;" align="right">Recovery rate (in decimal): <input type = "text" name = "Recovery Rate" style = "width:200px;"></p>
+            <p style = "width:500px;" align="right">Hazard rate (in decimal): <input type = "text" name = "Hazard Rate" style = "width:200px;"></p>
+            <p style = "width:500px;" align="right">Risk-free rate (in decimal): <input type = "text" name = "Discount Rate" style = "width:200px;"></p>
             <p style = "width:500px;" align="right">Issue Date: <input type = "date" name = "Issue Date" min = "2010-01-01" style = "width:200px;"></p>
             <p style = "width:500px;" align="right">Maturity Date: <input type = "date" name = "Maturity Date" min = "2010-01-01" style = "width:200px;"></p>
             <p style = "width:500px;" align="right">Frequency: <select name = "Frequency" action = '/' style = "width:200px;">
