--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -75,7 +75,7 @@
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/European_pricing">AssetsPricing</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ap_introduction">AssetsPricing</a></li>
 					</ul>
 
 					<ul class="navbar-nav ml-auto mt-2">
